test-crates/duchess-java-tests/tests/ui/type_mismatch_bad_argument_type.stderr
error[E0277]: the trait bound `u64: duchess::JvmOp` is not satisfied
  --> $DIR/type_mismatch_bad_argument_type.rs:11:41
   |
11 |     type_mismatch::TakesInt::new().take(i).execute();
   |                                    ---- ^ the trait `duchess::JvmOp` is not implemented for `u64`
   |                                    |
   |                                    required by a bound introduced by this call
   |
   = help: the following other types implement trait `duchess::JvmOp`:
             i8
             i16
             i32
             i64
             u16
             f32
             f64
   = note: required for `u64` to implement `IntoScalar<i32>`
note: required by a bound in `ViewAsTakesIntOp::<J, N>::take`
  --> $DIR/type_mismatch_bad_argument_type.rs:4:1
   |
4  | / duchess::java_package! {
5  | |     package type_mismatch;
6  | |
7  | |     public class TakesInt {*}
8  | | }
   | |_^ required by this bound in `ViewAsTakesIntOp::<J, N>::take`
   = note: this error originates in the macro `duchess::java_package` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `u32: duchess::JvmOp` is not satisfied
  --> $DIR/type_mismatch_bad_argument_type.rs:16:41
   |
16 |     type_mismatch::TakesInt::new().take(i).execute();
   |                                    ---- ^ the trait `duchess::JvmOp` is not implemented for `u32`
   |                                    |
   |                                    required by a bound introduced by this call
   |
   = help: the following other types implement trait `duchess::JvmOp`:
             i8
             i16
             i32
             i64
             u16
             f32
             f64
   = note: required for `u32` to implement `IntoScalar<i32>`
note: required by a bound in `ViewAsTakesIntOp::<J, N>::take`
  --> $DIR/type_mismatch_bad_argument_type.rs:4:1
   |
4  | / duchess::java_package! {
5  | |     package type_mismatch;
6  | |
7  | |     public class TakesInt {*}
8  | | }
   | |_^ required by this bound in `ViewAsTakesIntOp::<J, N>::take`
   = note: this error originates in the macro `duchess::java_package` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
